--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title><%= title %></title>
+    <script src="../scripts/graph.js" type="text/javascript"></script>
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
