--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title><%= title %></title>
-    <script src="../scripts/graph.js" type="text/javascript"></script>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-  </body>
+<head>
+	<title><%= title %></title>
+	<script src="../scripts/graph.js" type="text/javascript"></script>
+	<link rel='stylesheet' href='/stylesheets/style.css'/>
+</head>
+<body>
+<div class="outer">
+	<div class="inner">
+		Welcome to <%= title %>!
+	</div>
+	<div class="inner" id="login-button">
+		login button goes here
+	</div>
+</div>
+</body>
 </html>
