--- a/views/login.ejs
+++ b/views/login.ejs
@@ -7,43 +7,21 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
 </head>
 <body>
-    <div id="fb-root"></div>
     <script>
-        (function(d, s, id) {
-        var js, fjs = d.getElementsByTagName(s)[0];
-        if (d.getElementById(id)) return;
-        js = d.createElement(s); js.id = id;
-        js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.7&appId=1059613384157964";
-        fjs.parentNode.insertBefore(js, fjs);
-    }(document, 'script', 'facebook-jssdk'));
-    </script>
-    <script>
-        // This is called with the results from from FB.getLoginStatus().
         function statusChangeCallback(response) {
-            console.log('statusChangeCallback');
             console.log(response);
-            // The response object is returned with a status field that lets the
-            // app know the current login status of the person.
-            // Full docs on the response object can be found in the documentation
-            // for FB.getLoginStatus().
             if (response.status === 'connected') {
-                // Logged into your app and Facebook.
-                alert('login');
+                FB.api('/me', function(response) {
+                    console.log(response);
+                    console.log('Successful login for: ' + response.name);
+                });
             } else if (response.status === 'not_authorized') {
-                // The person is logged into Facebook, but not your app.
-                document.getElementById('status').innerHTML = 'Please log ' +
-                    'into this app.';
+                console.log('Please log into this app.')
             } else {
-                // The person is not logged into Facebook, so we're not sure if
-                // they are logged into this app or not.
-                document.getElementById('status').innerHTML = 'Please log ' +
-                    'into Facebook.';
+                console.log('Please log into Facebook.')
             }
         }
 
-        // This function is called when someone finishes with the Login
-        // Button.  See the onlogin handler attached to it in the sample
-        // code below.
         function checkLoginState() {
             FB.getLoginStatus(function(response) {
                 statusChangeCallback(response);
@@ -59,22 +37,9 @@
                 version    : 'v2.5' // use graph api version 2.5
             });
 
-            // Now that we've initialized the JavaScript SDK, we call
-            // FB.getLoginStatus().  This function gets the state of the
-            // person visiting this page and can return one of three states to
-            // the callback you provide.  They can be:
-            //
-            // 1. Logged into your app ('connected')
-            // 2. Logged into Facebook, but not your app ('not_authorized')
-            // 3. Not logged into Facebook and can't tell if they are logged into
-            //    your app or not.
-            //
-            // These three cases are handled in the callback function.
-
             FB.getLoginStatus(function(response) {
                 statusChangeCallback(response);
             });
-
         };
 
         // Load the SDK asynchronously
