--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title><%= title %></title>
-    <script src="../scripts/graph.js" type="text/javascript"></script>
+    <script src="../public/scripts/graph.js" type="text/javascript"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <link rel='stylesheet' href='/stylesheets/style.css' />
 </head>
