--- a/views/login.ejs
+++ b/views/login.ejs
@@ -9,10 +9,9 @@
 <body>
     <script>
         function statusChangeCallback(response) {
-            console.log(response);
             if (response.status === 'connected') {
                 //connected, redirect to main page
-                window.location = "/";
+                //window.location = "/";
                 onLogIn();
             } else if (response.status === 'not_authorized') {
                 console.log('Please log into this app.')
@@ -53,12 +52,10 @@
 
     <h1><%= title %></h1>
 
-    <div class="fb-login-button" data-max-rows="1" data-size="medium" data-show-faces="false" data-auto-logout-link="false"></div>
-
+    <div class="fb-login-button" data-max-rows="1" data-size="xlarge" data-show-faces="false" data-auto-logout-link="false"></div>
     <script>
         function onLogIn() {
             FB.api('/me', function(response) {
-                console.log(response);
                 console.log('Successful login for: ' + response.name);
             });
         }
