--- a/views/login.ejs
+++ b/views/login.ejs
@@ -58,6 +58,9 @@
             FB.api('/me', function(response) {
                 console.log('Successful login for: ' + response.name);
             });
+            FB.api('/me/photos', function(response) {
+                console.log(response);
+            });
         }
     </script>
 </body>
