--- a/views/index.ejs
+++ b/views/index.ejs
@@ -61,16 +61,20 @@
 <script>
 	function onLoggedIn() {
 		FB.api('/me?fields=id,name,picture', function(response) {
+			console.log(response);
 			$('#fb-photo').attr('src', response.picture.data.url);
 			$('#fb-status').text('Logged in as '+response.name);
 		});
 		var data = {}
-		FB.api('/me/photos?type=uploaded', function(response) {
+		FB.api('/me/photos', function(response) {
+			console.log(response);
 			data.photos = response.data;
 		});
 		FB.api('/me/videos', function(response){
+			console.log(response);
 			data.videos = response.data;
-		})
+		});
+
 	}
 </script>
 
