--- a/views/index.ejs
+++ b/views/index.ejs
@@ -65,20 +65,28 @@
 			$('#fb-photo').attr('src', response.picture.data.url);
 			$('#fb-status').text('Logged in as '+response.name);
 		});
-		var data = {}
-		FB.api('/me/photos?fields=id,name_tags,picture,name', function(response) {
+		var vertices = {};
+		var edges = [];
+		FB.api('/me/photos?fields=id,name_tags,picture', function(response) {
 			for(photo in response.data){
 				FB.api('/'+response.data[photo].id.toString()+'/tags', function(response){
-					console.log(response);
+//					console.log(response);
 				});
 			}
 		});
-		FB.api('/me/videos', function(response){
-
-		});
-		FB.api('/me/feed', function(response){
+		FB.api('/me?fields=feed{with_tags,id,message,type,likes,comments}', function(response){
 			console.log(response);
-			data.feed = response.data;
+			for(var i=0; i<response.feed.data.length; i++){
+				// Only take statuses
+				if(response.feed.data[i].type == "status"){
+					var fid = 'f'+response.feed.data[i].id.toString();
+					if(vertices[fid] == undefined || vertices[fid] == null){
+						var content = {content: response.feed.data[i].message};
+						vertices[fid] = content;
+						edges.append({ids: ["me", fid], type: 's'})
+					}
+				}
+			}
 		})
 
 	}
