Fix navbar picture

--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -1,7 +1,9 @@
+#logged-in-user {
+    
+}
 #fb-image {
     padding: 12px;
 }
 #image-container {
-    display: inline-block;
     padding: 12px;
 }
