--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,8 +8,10 @@
     <script src="/javascripts/d3/d3.layout.js" type="text/javascript"></script>
     <script src="/javascripts/CodeFlower.js" type="text/javascript"></script>
 	<script src="/javascripts/graph.js" type="text/javascript"></script>
+	<script src="/javascripts/bootstrap.min.js" type="text/javascript"></script>
 	<link rel='stylesheet' href='/stylesheets/shared.css' />
 	<link rel='stylesheet' href='/stylesheets/index.css' />
+	<link rel="stylesheet" href="/stylesheets/bootstrap.min.css"/>
 </head>
 
 <body>
@@ -154,5 +156,26 @@
 	</div>
 </div>
 
+<!-- Button trigger modal -->
+<button type="button" class="btn btn-primary btn-lg hidden" data-toggle="modal" data-target="#myModal"></button>
+
+<!-- Modal -->
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+	<div class="modal-dialog" role="document">
+		<div class="modal-content">
+			<div class="modal-header">
+				<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+				<h4 class="modal-title" id="myModalLabel">Modal title</h4>
+			</div>
+			<div class="modal-body">
+				...
+			</div>
+			<div class="modal-footer">
+				<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+				<button type="button" class="btn btn-primary">Save changes</button>
+			</div>
+		</div>
+	</div>
+</div>
 </body>
 </html>
