--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,6 +7,8 @@
     <script src="/javascripts/d3/d3.geom.js" type="text/javascript"></script>
     <script src="/javascripts/d3/d3.layout.js" type="text/javascript"></script>
     <script src="/javascripts/CodeFlower.js" type="text/javascript"></script>
+	<script src="/javascripts/clickVertex.js" type="text/javascript"></script>
+	<script src="/javascripts/deleteInfo.js" type="text/javascript"></script>
 	<script src="/javascripts/graph.js" type="text/javascript"></script>
 	<link rel='stylesheet' href='/stylesheets/shared.css' />
 	<link rel='stylesheet' href='/stylesheets/index.css' />
@@ -51,11 +53,11 @@
 	</div>
 </div>
 
-<!-- Button trigger modal
-<button type="button" class="btn btn-primary btn-lg hidden" data-toggle="modal" data-target="#myModal"></button>
+<!-- Button trigger modal -->
+<button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal" style="display: none;"></button>
 
-<!-- Modal
-<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+<!-- Modal -->
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" style="display: none;">
 	<div class="modal-dialog" role="document">
 		<div class="modal-content">
 			<div class="modal-header">
@@ -71,6 +73,6 @@
 			</div>
 		</div>
 	</div>
-</div>-->
+</div>
 </body>
 </html>
