--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,14 +3,12 @@
 <head>
     <title><%= title %></title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="/javascripts/d3/d3.js" type="text/javascript"></script>
-    <script src="/javascripts/d3/d3.geom.js" type="text/javascript"></script>
-    <script src="/javascripts/d3/d3.layout.js" type="text/javascript"></script>
-    <script src="/javascripts/CodeFlower.js" type="text/javascript"></script>
+    <script src="https://d3js.org/d3.v4.js"></script>
 	<script src="/javascripts/bootstrap.min.js" type="text/javascript"></script>
-	<script src="/javascripts/graph.js" type="text/javascript"></script>
 	<link rel="stylesheet" href="/stylesheets/bootstrap.min.css">
     <link rel='stylesheet' href='/stylesheets/style.css' />
+	<script src="/javascripts/graph.js" type="text/javascript"></script>
+	<script src="/javascripts/testing.js" type="text/javascript"></script>
 </head>
 
 <body>
