--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,6 +5,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <link rel='stylesheet' href='/stylesheets/shared.css' />
     <link rel='stylesheet' href='/stylesheets/login.css' />
+    <link rel="icon" type="image/png" href="/images/icon.png">
     <script>
         var onConnectedFn = function() {
             console.log("here");
