--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,6 +12,8 @@
     <script src="/javascripts/graph.js" type="text/javascript"></script>
     <script src="/javascripts/facebook.js" type="text/javascript"></script>
     <script src="/javascripts/indexjs.js" type="text/javascript"></script>
+
+    <link rel="icon" type="image/png" href="/images/icon.png">
 </head>
 
 <body>
