--- a/public/stylesheets/prompt.css
+++ b/public/stylesheets/prompt.css
@@ -18,7 +18,7 @@
     padding: 16px;
 }
 #prompt-popup #header-text {
-    margin: 0 0 12px;
+    margin: 12px 0 6px 0;
 }
 #prompt-popup #message-text > p {
     margin: 0 0 4px 0;
