--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,7 +23,6 @@
 	<div id="navbar-content" class="content">
 		<a href="/"><h1>webb</h1></a>
 		<div id="navbar-right">
-			<p id="logged-in-user"></p>
 			<div id="image-container">
 				<img id="fb-photo" src="/images/user.png">
 			</div>
@@ -35,6 +34,8 @@
 <script src="/javascripts/prompt.js"></script>
 <div id="dimmer">
     <div id="prompt-popup">
+        <img id="popup-image" width="400"/>
+        <div id="status-text"></div>
         <h2 id="header-text"></h2>
         <div id="message-text"></div>
         <div id="button-container">
@@ -45,34 +46,7 @@
     </div>
 </div>
 
-<div class="body">
-	<div class="container">
-		<div class="content">
-			<div id="graph"></div>
-		</div>
-	</div>
-</div>
+<div id="graph"></div>
 
-<!-- Button trigger modal -->
-<button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal" style="display: none;"></button>
-
-<!-- Modal -->
-<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" style="display: none;">
-	<div class="modal-dialog" role="document">
-		<div class="modal-content">
-			<div class="modal-header">
-				<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-				<h4 class="modal-title" id="myModalLabel">Modal title</h4>
-			</div>
-			<div class="modal-body">
-				...
-			</div>
-			<div class="modal-footer">
-				<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-				<button type="button" class="btn btn-primary">Save changes</button>
-			</div>
-		</div>
-	</div>
-</div>
 </body>
 </html>
