--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,9 +23,14 @@
 	<div id="navbar-content" class="content">
 		<a href="/"><h1>webb</h1></a>
 		<div id="navbar-right">
+			<div id="toolbar">
+				<div id="delete-button" class="myButton">Delete</div>
+				<div id="revert-button" class="myButton">Revert to Original</div>
+			</div>
 			<div id="image-container">
 				<img id="fb-photo" src="/images/user.png">
 			</div>
+
 		</div>
 	</div>
 </div>
