--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,10 +23,6 @@
 	<div id="navbar-content" class="content">
 		<a href="/"><h1>webb</h1></a>
 		<div id="navbar-right">
-			<div id="toolbar">
-				<div id="delete-button" class="myButton">Delete</div>
-				<div id="revert-button" class="myButton">Revert to Original</div>
-			</div>
 			<div id="image-container">
 				<img id="fb-photo" src="/images/user.png">
 			</div>
@@ -43,10 +39,12 @@
         <div id="status-text"></div>
         <h2 id="header-text"></h2>
         <div id="message-text"></div>
+		<div style="display: none;" id="info-text"></div>
         <div id="button-container">
             <button id="yes-button">yes</button>
             <button id="no-button">no</button>
             <button id="okay-button">okay</button>
+			<button id="remove-button">remove</button>
         </div>
     </div>
 </div>
