--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title><%= title %></title>
+    <title>Login</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <link rel='stylesheet' href='/stylesheets/shared.css' />
     <link rel='stylesheet' href='/stylesheets/login.css' />
